# auto-test

./: .dockerignore  Dockerfile  app.yaml  collection.json  docker-compose.yml  environment copy.json  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
tests/: pytest.ini  test_smoke.py
tests/tests_portal/endpoints/: conftest.py  get_token.py  test_get_portal_partners_list.py
tests/tests_portal/fixtures/: swagger.py
tests/tests_portal/helpers/: user_management_ui.py
tests/tests_portal/sanity_suite/: test_add_company.py  test_add_partner.py  test_add_users.py  test_home_grids_sa.py  test_home_sidebar_sa.py  test_login.py  test_login_failures.py  test_login_ui_forgotpassword.py
