[project]
name = "fido-api"
version = "2.4.0"
description = "Fido Tech Monolith API"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "fastapi[all]==0.94.1",
    "sqlmodel==0.0.6",
    "SQLAlchemy==1.4.35",
    "sqlalchemy2-stubs==0.0.2a24",
    "aiomysql==0.2.0",
    "aioredis==2.0.1",
    "azure-identity==1.14.1",
    "azure-keyvault-secrets==4.8.0",
    "azure-storage-blob==12.24.0",
    "azure-storage-queue==12.12.0",
    "bcrypt==4.0.1",
    "bitarray==3.0.0",
    "brotli-asgi==1.4.0",
    "coverage==7.6.7",
    "dacite==1.8.1",
    "fiona==1.10.1",
    "GeoAlchemy2==0.13.3",
    "geojson-pydantic==0.6.3",
    "geopy==2.4.1",
    "graphviz==0.20.3",
    "gunicorn==23.0.0",
    "librosa==0.9.2",
    "numba==0.60.0",
    "numpy==1.26.4",
    "momepy==0.8.1",
    "natsort==8.4.0",
    "openpyxl==3.1.5",
    "passlib==1.7.4",
    "postmarker==1.0",
    "psyplot==1.4.3",
    "psy-strat==0.1.1",
    "psycopg[binary,pool]==3.2.3",
    "tenacity==9.0.0",
    "timezonefinder==6.5.4",
    "what3words==3.3.0",
    "zcbor==0.7.0",
    "python-jose==3.3.0",
    "rdp==0.8",                      #Python/NumPy implementation of the Ramer-Douglas-Peucker algorithm"redis[hiredis]==5.2.0",
    "sendgrid==6.11.0",
    "sentry-sdk==2.18.0",
    "google-cloud-core==2.4.1",
    "google-cloud-storage==2.18.2",
    "zipp==3.21.0",
    "werkzeug>=3.1.3",
    "pip-tools==7.4.1",
    "pip3-autoremove==1.2.2",
    "pipdeptree==2.23.4",
    "pipreqs==0.4.5",
    "pre-commit==4.0.1",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.35.0",
    "pytest-ruff==0.4.1",
    "ruff==0.7.4",
    "locust==2.32.3",
    "jira==3.8.0",
    "tomli==2.0.1",
    "virtualenv-clone==0.5.7",
    "watchgod==0.8.2",
    "wrapt==1.14.1",
    "yarl==1.9.3",
    "aiocache==0.12.3",
    "pytest-cov==6.0.0",
]
[dependency-groups]
dev = [
    "pip-tools==7.4.1",
    "pip3-autoremove==1.2.2",
    "pipdeptree==2.23.4",
    "pipreqs==0.4.5",
    "pre-commit==4.0.1",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.35.0",
    "pytest-ruff==0.4.1",
    "ruff==0.7.4",
    "locust==2.32.3",
]
